--- a/cmd/prompt-builder/testdata/config/valid.yaml
+++ b/cmd/prompt-builder/testdata/config/valid.yaml
@@ -1,3 +1,3 @@
 model: test-model
-ollama_host: http://localhost:11434
+host: http://localhost:11434
 system_prompt_file: testdata/prompts/system.txt
